--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 env_logger = "0.10.0"
 log = "0.4.20"
+noise = "0.8.2"
 pixels = "0.13.0"
 rand = "0.8.5"
 winit = "0.28.6"
